Fixed delta time except blood and gravity hehehehe

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }(document, 'script', 'facebook-jssdk'));
     </script>
 
-    <!--<p id="p1">Hello! No resize yet</p>-->
+    <p id="p1">Hello! No resize yet</p>
 
     <script type="text/javascript" src="stick.js"></script>
     <script>init();</script>
