--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         <!--<p id="p1">Hello! No resize yet</p>-->
         <script type="text/javascript" src="client_gamecore.js"></script>
         <script>init();</script>
+
+        <h1 style="text-align: center;">
+            Created by Paul Henninger and Rhys Howell
+        </h1>
+        <p style="text-align: center;">
+            Bugs, Comments, and or Questions? Email rhysh@live.com
+        </p>
     </body>
 
 </html>
