I DONT THINK I HAVE DONE ANYTHING

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 	<head>
 		<title>Stick Battle</title>
 
+        <link rel="icon" type="image/png"
+              href="tabIcon.png" />
+
         <!-- Load style sheet -->
         <!--<link href="index.css" media="screen" rel="stylesheet" type="text/css">-->
 	</head>
@@ -36,6 +39,8 @@
         <p style="text-align: center;">
             Bugs, Comments, and or Questions? Email rhysh@live.com
         </p>
+
+        <p id="p1">Hello! No click yet</p>
     </body>
 
 </html>
