So tired, put in Enter key then almost fell asleep on keyboard

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         <script type="text/javascript" src="client_gamecore.js"></script>
         <script>init();</script>
 
-        <h1 style="text-align: center;">
+        <!--<h1 style="text-align: center;">
             Created by Paul Henninger and Rhys Howell
         </h1>
         <p style="text-align: center;">
             Bugs, Comments, and or Questions? Email rhysh@live.com
         </p>
 
-        <p id="p1">Hello! No click yet</p>
+        <p id="p1">Hello! No click yet</p>-->
     </body>
 
 </html>
