Online smoother and fixing bugs

--- a/index.html
+++ b/index.html
@@ -6,41 +6,39 @@
         <link rel="icon" type="image/png"
               href="tabIcon.png" />
 
-        <!-- Load style sheet -->
-        <!--<link href="index.css" media="screen" rel="stylesheet" type="text/css">-->
 	</head>
 
     <body style="text-align: center; margin: 0; padding: 0; border: 0; display: block; ">
-        <!-- Library code -->
-        <!-- Load socket.io client side contents. -->
         <script src="/socket.io/socket.io.js"></script>
         <!--<script src="http://localhost:4004/socket.io/socket.io.js"></script>-->
-
-        <!-- Load the GUI rendering library code. -->
-        <!--<script type="text/javascript" src="lib/dat.gui.min.js"></script>-->
-        <!-- Load the keyboard specific code -->
-        <!--<script type="text/javascript" src="lib/keyboard.js"></script>-->
-
-        <!-- Game code -->
-        <!-- Load the common game code. -->
-        <!--<script type="text/javascript" src="game.core.js"></script>-->
-        <!--<script type="text/javascript" src="client_gamecore.js"></script>-->
-
-        <!-- Finally, Load the game client code. -->
-        <!--<script type="text/javascript" src="client.js"></script>-->
 
         <!--<p id="p1">Hello! No resize yet</p>-->
         <script type="text/javascript" src="client_gamecore.js"></script>
         <script>init();</script>
 
+        <!--<a style="text-align: center;" href="https://docs.google.com/forms/d/1-D6TnZRJk0RSYa8LJTHVN56AZ_DRwbOK0Q7heU2qQf8/viewform">Bugs, Comments, and or Questions?</a>-->
+
         <!--<h1 style="text-align: center;">
             Created by Paul Henninger and Rhys Howell
-        </h1>
-        <p style="text-align: center;">
-            Bugs, Comments, and or Questions? Email rhysh@live.com
-        </p>
+        </h1>-->
+        <p id="p1"></p>
+        <a href="https://docs.google.com/forms/d/1-D6TnZRJk0RSYa8LJTHVN56AZ_DRwbOK0Q7heU2qQf8/viewform" style="text-align:center">Bugs, Comments, and or Questions?</a>
 
-        <p id="p1">Hello! No click yet</p>-->
+        <p id="p2"></p>
+
+        <!--<p id="p3">V Advertisement V</p>-->
+
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- Stick Battle Ad -->
+        <ins class="adsbygoogle"
+             style="display:inline-block;width:728px;height:90px"
+             data-ad-client="ca-pub-7520943130904146"
+             data-ad-slot="3608346966"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+
+        <!--<p id="p1">Hello! No click yet</p>-->
     </body>
 
 </html>
