--- a/index.html
+++ b/index.html
@@ -28,14 +28,40 @@
 
         <!--<p id="p3">V Advertisement V</p>-->
 
+        <div id="fb-root"></div>
+        <script>
+            (function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s); js.id = id;
+                js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=202052943324855";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+        </script>
+
+        <div class="fb-like" data-href="https://www.facebook.com/StickBattleGame" data-width="80" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+
         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <!-- Stick Battle Ad -->
+        <!-- Stick-battle.com -->
         <ins class="adsbygoogle"
              style="display:inline-block;width:728px;height:90px"
              data-ad-client="ca-pub-7520943130904146"
-             data-ad-slot="3608346966"></ins>
+             data-ad-slot="1544577365"></ins>
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+
+        <script>
+            (function (i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+            ga('create', 'UA-48092598-1', 'stick-battle.com');
+            ga('send', 'pageview');
+
         </script>
 
         <!--<p id="p1">Hello! No click yet</p>-->
