--- a/index.html
+++ b/index.html
@@ -41,15 +41,14 @@
 
         <div class="fb-like" data-href="https://www.facebook.com/StickBattleGame" data-width="80" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
 
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <!-- Stick-battle.com -->
+        <!--<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
         <ins class="adsbygoogle"
              style="display:inline-block;width:728px;height:90px"
              data-ad-client="ca-pub-7520943130904146"
              data-ad-slot="1544577365"></ins>
         <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+        </script>-->
 
         <script>
             (function (i, s, o, g, r, a, m) {
